hphp/hack/test/typecheck/modules/internal_outside_module.php.rust_provider_backend.exp
ERROR: File "internal_outside_module.php", line 3, characters 1-8:
`internal` cannot be used outside of a module. Please define a module for this file. (Parsing[1002])
ERROR: File "internal_outside_module.php", line 5, characters 1-8:
`internal` cannot be used outside of a module. Please define a module for this file. (Parsing[1002])
ERROR: File "internal_outside_module.php", line 6, characters 3-10:
`internal` cannot be used outside of a module. Please define a module for this file. (Parsing[1002])
ERROR: File "internal_outside_module.php", line 7, characters 13-20:
`internal` cannot be used outside of a module. Please define a module for this file. (Parsing[1002])
ERROR: File "internal_outside_module.php", line 10, characters 1-8:
`internal` cannot be used outside of a module. Please define a module for this file. (Parsing[1002])
