hphp/hack/test/typecheck/modules/internal_outside_module.php
<?hh

internal function f(): void {}

internal class A {
  internal function g(): void {}
  protected internal function h(): void {}
}

internal type Foobar = int;
